syntax = "proto3";

package user;

option go_package = "proto/userpb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserId {
  string id = 1;
}

message Empty {}

message UserList {
  repeated User users = 1;
}

service UserService {
  rpc CreateUser(User) returns (User);
  rpc GetUser(UserId) returns (User);
  rpc UpdateUser(User) returns (User);
  rpc DeleteUser(UserId) returns (Empty);
  rpc ListUsers(Empty) returns (UserList);
}
